# vowpal_wabbit

./: .gitignore  CMakeLists.txt  Makefile.am  README2.md
api/: VW.cs  api.vcxproj  api.vcxproj.filters  decisionservice.h  prebuilt.bat  vw_api.cpp  vw_api.h
api/csharp/: csharp.vcxproj  csharp.vcxproj.filters
api/csharp45/: csharp45.csproj  test.cs
cs/: Extensions.cs  ObjectFactory.cs  ObjectPool.cs  PooledObject.cs  VowpalWabbit.cs  VowpalWabbitAsync.cs  VowpalWabbitMultiLine.cs  VowpalWabbitThreadedLearning.cs  VowpalWabbitThreadedPrediction.cs  VowpalWabbitThreadedPredictionBase.cs  cs.nuspec
cs/Interfaces/: ILabel.cs
cs/Labels/: ContextualBanditLabel.cs  SharedLabel.cs  SimpleLabel.cs
cs/Properties/: AssemblyInfo.cs
cs/Serializer/: VowpalWabbitCachedExample.cs  VowpalWabbitDebugExample.cs  VowpalWabbitSerializer.cs  VowpalWabbitSerializerFactory.cs
cs/cli/: clr_io.cpp  cs_vld.vcxproj  packages.config  vw_clr.vcxproj
cs/cs/: cs.csproj  packages.config
cs/cs_console/: cs_console.csproj
cs/cs_json/: cs_json.csproj
cs/explore/: ExplorationStrategies.cs  MurMurHash3.cs  ds_explore_standard.csproj
cs/slim/: CMakeLists.txt  TestDriver.cs  cs_slim.sln
cs/slim/VowpalWabbit.Diagnostics/: Program.cs  VowpalWabbit.Diagnostics.csproj
cs/slim/VowpalWabbit.Diagnostics/Properties/: AssemblyInfo.cs
cs/slim/VowpalWabbit.JSON/: JsonDeserializer.cs  VowpalWabbit.JSON.csproj
cs/slim/netstandard/: vw_slim_cs_standard.csproj
cs/slim/netstandard_test/: vw_slim_cs_standard_test.csproj
cs/slim/predict/: AuditExtensions.cs  AuditFeature.cs  Constants.cs  ContextualBanditExample.cs  DenseModelWeights.cs  Example.cs  Exploration.cs  Extensions.cs  Feature.cs  HashUtil.cs  IModelWeights.cs  JsonSerializer.cs  Model.cs  ModelParser.cs  ModelParserException.cs  MultilineExample.cs  MurMurHash3.cs  OptionParser.cs  Ranking.cs  SparseModelWeights.cs  TextDeserializer.cs  TextSerializer.cs  VowpalWabbitPredictor.cs  VowpalWabbitPredictorContextualBandit.cs  VowpalWabbitPredictorContextualBanditBag.cs  VowpalWabbitPredictorContextualBanditEpsilonGreedy.cs  VowpalWabbitPredictorContextualBanditSoftmax.cs  VowpalWabbitPredictorMulticlass.cs  VowpalWabbitPredictorRegression.cs
cs/slim/test/: ContextualBanditTests.cs  Data.cs  FuzzyFloatComparer.cs  MulticlassTests.cs  OptionParserTests.cs  RegressionTests.cs  VowpalWabbit.Prediction.Tests.csproj  test.csproj
cs/slim/test/Properties/: AssemblyInfo.cs
cs/test/: cs_test.csproj
cs_test/: AttributesSample.cs  ExploreClock.cs  ExploreOnlySample.cs  Program.cs  VowpalWabbitInterface.cs
cs_unittest/: BaseData.cs  CbAdfData.cs  Rcv1Test.cs  RunTests.cs  Test1and2.cs  Test3.cs  TestAllReduce.cs  TestAntlr.cs  TestBase.cs  TestCbAdf.cs  TestErrorListener.cs  TestExampleCache.cs  TestManagedHash.cs  TestModelLoading.cs  TestNull.cs  TestPooling.cs  TestWrapper.cs  TrainSet0002Dat.cs  TrainSetCs_testLdf.cs  VWTestHelper.cs  VowpalWabbitListenerToEvents.cs  cs_unittest.csproj
decision_service/: CMakeLists.txt  ds_api.h  ds_api.i  ds_api_java.i  ds_config.cc  ds_explore.cc  ds_explore.h  ds_explore_epsilon.cc  ds_internal.cc  ds_internal.h  ds_predictor_container.cc  ds_predictors.h  ds_rank_response.cc  event_hub_client.cc  event_hub_client.h  launch.json
decision_service/csharp/: CMakeLists.txt  dependencies.cmake.in  ds_api_csharp.i
decision_service/csharp/managed/: CMakeLists.txt  ds_cs_managed.csproj.in  ds_cs_managed.nuspec  ds_cs_managed_UWP.csproj
decision_service/exploration/: CMakeLists.txt
decision_service/exploration/cpp/: CMakeLists.txt  ds_explore.cc  ds_explore.h
decision_service/exploration/csharp/: CMakeLists.txt  ExplorationStrategies.cs  Microsoft.DecisionService.Exploration.nuspec  Microsoft.DecisionService.Exploration.nuspec.in  PRG.cs  Sampling.cs  TestDriver.cs  ds_explore_cs.csproj  ds_explore_cs_standard.csproj.in  ds_explore_cs_test.csproj
decision_service/exploration/csharp/netstandard/: ds_explore_cs_standard.csproj
decision_service/exploration/onnx/: onnx-exploration.py  test-driver.py
decision_service/exploration/tests/: test1-expected.txt  test1-input.txt
decision_service/logging/: CMakeLists.txt
decision_service/logging/http/csharp/: CMakeLists.txt  DataLogger.cs  EventHubClient.cs  EventHubConnection.cs  Microsoft.DecisionService.Logging.nuspec.in  RewardLogger.cs  SasTokenHelper.cs  SasTokenProvider.cs  TestDriver.cs  ds_logging_cs_standard.csproj.in  packages.config  readme.MD
decision_service/logging/http/csharp/test/: CMakeLists.txt  UnitTest.cs  packages.config
decision_service/prediction/: CMakeLists.txt
decision_service/prediction/csharp/: CMakeLists.txt  ContextualBanditExample.cs  Example.cs  Feature.cs  Microsoft.DecisionService.Prediction.nuspec.in  Model.cs  ModelParser.cs  TestDriver.cs  ds_prediction_cs_standard.csproj.in  ds_prediction_cs_standard_test.csproj.in
decision_service/python/: CMakeLists.txt  ds_explore_py.cc  ds_explore_py.h
decision_service/python/test/: test_ds_api.py
decision_service/test/: CMakeLists.txt  decision_service_test  ds_test.cc  ds_test_action_probabilities.cc  ds_test_explore_epsilon.cc  ds_test_explore_softmax.cc
vowpalwabbit/: CMakeLists.txt  Makefile.am  autolink.h  autolink2.cc  autolink2.h  bfgs.cc  cb_adf.cc  cb_explore_adf.cc  csoaa.cc  decisionservice.h  gd.cc  gd2.cc  global_data.cc  global_data.h  interact.cc  io_buf.cc  io_buf.h  kernel_svm.cc  libvw.vcxproj  load_model.py  main.cc  nn.cc  packages.config  parse_args.cc  parse_args.h  parse_regressor.cc  parser.cc  prebuilt.bat  search.cc  stagewise_poly.cc  vw.h  vw.sln  vw.vcxproj  vw_api.cpp  vw_api.h  vw_api.i  vw_base.h  vw_dynamic.vcxproj  vw_static.vcxproj
vowpalwabbit-predict/: CMakeLists.txt  cb_example.cc  cb_example.h  count_code_lines.sh  example.cc  example.h  example_builder.h  features.cc  features.h  main.cc  model.cc  model.h  parser_json.cc  parser_json.h
vw_clr/: clr_io.cpp  clr_io_memory.cpp  clr_io_memory.h  vw_base.cpp  vw_clr.h  vw_clr.vcxproj  vw_clr.vcxproj.filters  vw_example.cpp  vw_example.h  vw_examplebuilder.cpp
(+38 files in other folders)
